# calendar-scheduler

./: Dockerfile  README.MD  README.md  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate-submission.sh
server/: app.py
