[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-calendar-scheduler"
version = "0.1.0"
description = "A scheduler for Meta calendar events"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "openenv-core",
    "pydantic"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server"]